<resources>
    <string name="app_name">Fullscreen Timer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="label_clock">clock</string>
    <string name="label_stopwatch">stopwatch</string>
    <string name="label_timer">timer</string>

    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_reset">Reset</string>
    <string name="action_set_timer">Set timer</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_toggle_timer_state">Start or pause</string>

    <string name="menu_title_foreground_color">Foreground color</string>
    <string name="menu_description_foreground_color">Set the color of the clock text</string>
    <string name="menu_title_background_color">Background color</string>
    <string name="menu_description_background_color">Set the color of the clock background</string>
    <string name="menu_title_button_opacity">Button Opacity</string>
    <string name="menu_title_volume">SE Volume</string>
    <string name="menu_title_hour_enabled">Display of \"hour\"</string>
    <string name="menu_description_hour_enabled_on">Display \"hour\"</string>
    <string name="menu_description_hour_enabled_off">Do not display \"hour\"</string>
    <string name="menu_title_hour_notation">Use 24-hour format</string>
    <string name="menu_description_hour_notation_on">24-hour format</string>
    <string name="menu_description_hour_notation_off">12-hour format</string>
    <string name="menu_title_millisecond_enabled">Display of \"fractional second\"</string>
    <string name="menu_description_millisecond_enabled_on">Display \"fractional second\"</string>
    <string name="menu_description_millisecond_enabled_off">Do not display \"fractional second\"</string>
    <string name="menu_title_second_enabled">Display of \"second\"</string>
    <string name="menu_description_second_enabled_on">Display \"second\"</string>
    <string name="menu_description_second_enabled_off">Do not display \"second\"</string>
    <string name="menu_title_fullscreen">Full screen view of the main screen</string>
    <string name="menu_description_fullscreen_on">Full screen view</string>
    <string name="menu_description_fullscreen_off">Do not display full screen</string>
    <string name="menu_title_font">Font</string>
    <string name="menu_description_font_led_7segment">7seg-LED</string>
    <string name="menu_description_font_roboto">Roboto</string>
    <string name="menu_title_orientation">Screen Orientation</string>
    <string name="menu_description_unspecified">Unspecified orientation from this app. Device will be the original orientation of the displayed app</string>
    <string name="menu_description_portrait">Fixed to portrait</string>
    <string name="menu_description_landscape">Fixed to landscape</string>
    <string name="menu_description_reverse_portrait">Fixed to reverse portrait</string>
    <string name="menu_description_reverse_landscape">Fixed to reverse landscape</string>
    <string name="menu_title_version">Version</string>

    <string name="timer_time_hour">Hours</string>
    <string name="timer_time_minute">Minutes</string>
    <string name="timer_time_second">Seconds</string>
    <string name="timer_time_value_range">Enter 0–%1$d</string>
    <string name="timer_time_decrease">Decrease %1$s</string>
    <string name="timer_time_increase">Increase %1$s</string>
    <string name="timer_time_preset_minutes">%1$d min</string>

    <string name="reset">reset</string>

    <string name="options_menu_license">Open source licenses</string>
    <string name="options_menu_source_code">Source code</string>
    <string name="options_menu_privacy_policy">Privacy policy</string>
    <string name="options_menu_play_store">Google Play store</string>
    <string name="options_menu_privacy_options">Privacy options</string>
</resources>
